test/errors/error3.base
Invalid left hand side of assignment
fun foo() {
   x-y = 1;
    ^
